@@ -1,33 +1,8 @@
-location = /webmail {
-    return 301 /webmail/;
-}
+# Support for secure URLs
+rewrite "^/webmail/[a-zA-Z0-9]{16}/(.*)" /webmail/$1 last;
 
-location ^~ /webmail/ {
-    root {WEB_DIR}/public/tools;
-
-    include mime.types;
-    types {
-        text/x-component .htc;
-    }
-
-    location ^~ /webmail/favicon.ico {
-        rewrite ^(.*)$ /webmail/skins/larry/images/favicon.ico;
-    }
-
-    # deny access to files not containing a dot or starting with a dot
-    location ~ ^/webmail/(\.?[^\.]+)$ {
-        return 403;
-    }
-
-    # deny access to some locations
-    location ~ ^/webmail/(SQL|bin|config|logs|temp|program/(include|lib|localization|steps)) {
-        return 403;
-    }
-
-    # deny access to composer binaries
-    location ~ ^/webmail/vendor/bin/.* {
-        return 403;
-    }
+location ^~ /webmail {
+    alias {WEB_DIR}/tools/webmail/public_html;
 
     location ~ \.php$ {
         include imscp_fastcgi.conf;
